--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,13 @@ spring.datasource.password=postgres
 spring.jpa.properties.hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.jdbc.batch_size=7
 spring.jpa.properties.hibernate.order_inserts=true
+# Path of the dispatcher servlet.
+# Setting a custom value for this property is not compatible with the PathPatternParser matching strategy.
+# default: /
+#spring.mvc.servlet.path=/api
 # logging
 logging.level.com.example=debug
 spring.jpa.show-sql=true
 # app config
-demo.storage.location=../demo-shop-upload-files
+demo.storage.location=../demo-shop-uploaded-files
 spring.data.web.pageable.default-page-size=10
